# historical-crypto-data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  update-data.yml
config/: assets.toml
data/ADAUSDT/10m/: 2018.parquet  2026.parquet
data/ADAUSDT/1d/: 2018.parquet  2026.parquet
data/ADAUSDT/1h/: 2018.parquet  2026.parquet
data/ADAUSDT/1m/: 2018.parquet  2026.parquet
data/ADAUSDT/1mo/: 2018.parquet  2026.parquet
data/ADAUSDT/1w/: 2018.parquet  2026.parquet
data/ADAUSDT/1yr/: 2018.parquet  2026.parquet
data/ADAUSDT/30m/: 2018.parquet  2026.parquet
data/ADAUSDT/5m/: 2018.parquet  2026.parquet
data/BNBUSDT/10m/: 2017.parquet  2026.parquet
data/BNBUSDT/1d/: 2017.parquet  2026.parquet
data/BNBUSDT/1h/: 2017.parquet  2026.parquet
data/BNBUSDT/1m/: 2017.parquet  2026.parquet
data/BNBUSDT/1mo/: 2017.parquet  2026.parquet
data/BNBUSDT/1w/: 2017.parquet  2026.parquet
data/BNBUSDT/1yr/: 2017.parquet  2026.parquet
data/BNBUSDT/30m/: 2017.parquet  2026.parquet
data/BNBUSDT/5m/: 2017.parquet  2026.parquet
data/BTCUSDT/10m/: 2017.parquet  2026.parquet
data/BTCUSDT/1d/: 2017.parquet  2026.parquet
data/BTCUSDT/1h/: 2017.parquet  2026.parquet
data/BTCUSDT/1m/: 2017.parquet  2026.parquet
data/BTCUSDT/1mo/: 2017.parquet  2026.parquet
data/BTCUSDT/1w/: 2017.parquet  (+1 more)
metadata/: state.json
src/crypto_data/: __init__.py  aggregate.py  binance.py  cli.py  collector.py  config.py  planner.py  state.py  storage.py  timeframes.py
tests/: test_aggregate.py  test_binance.py  test_config.py  test_planner.py  test_storage.py
(+114 files in other folders)
