[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "historical-crypto-data"
version = "0.1.0"
description = "Daily-updated Binance crypto kline archive stored as Parquet."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=15",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
crypto-data = "crypto_data.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

